z-index advertisement fix

--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,7 @@ body._lock{
     position: sticky;
     top: 0;
     width: 100%;
-    z-index: 10;
+    z-index: 12;
     height: 50px;
 }
 .advertisement-p{
